--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>My second commit</title>
+        <title>My third commit</title>
     </head>
 </html>
